feat: assign tags
