# src/app/service/tag/models.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export type {CreateTagRequest} from './models/create-tag-request';
+export type {ProblemDetailResponse} from './models/problem-detail-response';
+export type {TagResponse} from './models/tag-response';
