# src/app/service/transaction/models.ts
@@ -1,7 +1,10 @@
 /* tslint:disable */
 /* eslint-disable */
 export type {ProblemDetailResponse} from './models/problem-detail-response';
+export type {TagAssignTransactionRequest} from './models/tag-assign-transaction-request';
 export type {TransactionDetailStatsResponse} from './models/transaction-detail-stats-response';
 export type {TransactionOverviewDatasetResponse} from './models/transaction-overview-dataset-response';
 export type {TransactionOverviewResponse} from './models/transaction-overview-response';
+export type {TransactionQueryOverviewRequest} from './models/transaction-query-overview-request';
+export type {TransactionQueryOverviewResponse} from './models/transaction-query-overview-response';
 export type {TransactionStatsResponse} from './models/transaction-stats-response';
