# src/app/service/transaction/models/tag-assign-transaction-request.ts
@@ -1,0 +1,7 @@
+/* tslint:disable */
+
+/* eslint-disable */
+export interface TagAssignTransactionRequest {
+    tagId: string;
+    transactionId: string;
+}
