# src/app/service/transaction/models/transaction-query-overview-request.ts
@@ -1,0 +1,9 @@
+/* tslint:disable */
+
+/* eslint-disable */
+export interface TransactionQueryOverviewRequest {
+    page: number;
+    search: string;
+    size: number;
+    year: Array<number>;
+}
